--- a/worship.html
+++ b/worship.html
@@ -1,202 +1,260 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Worship</title>
-    <!-- <link rel="stylesheet" href="/CSS-Welcome/w-style.css" /> -->
-    <link rel="stylesheet" href="./CSS-Worship/wo-style.css" />
-    <link rel="stylesheet" href="./CSS-Welcome/w-navbar.css" />
-    <link rel="stylesheet" href="./CSS/dropdown.css" />
-    <link rel="stylesheet" href="./CSS-Worship/wo-church-name-box.css" />
-    <link rel="stylesheet" href="./CSS-Welcome/w-masstimes-overlay.css" />
-    <link rel="stylesheet" href="./CSS-Welcome/w-fixed-button.css" />
-    <link rel="stylesheet" href="./CSS-Welcome/w-footer.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!-- NAV ####################################################-->
-    <nav class="navbar">
-      <div class="text-logo">
-        <a href="index.html">Logo</a>
-        <!-- <img src="logo-placeholder.png" alt="Logo" class="logo-image" />  -->
-      </div>
-      <div class="nav-links">
-        <div class="dropdown">
-          <a href="welcome.html">Welcome</a>
-          <div class="dropdown-content">
-            <a href="welcome.html">Our Parish Mission</a>
-            <a href="welcome.html#parish-leadership">Our Servant Leaders</a>
-            <!-- <!- close "dropdown-content" for Welcome> -- -->
-          </div>
-          <!-- <!- close "dropdown" for Welcome> -- -->
-        </div>
-        <div class="dropdown">
-          <a href="worship.html">Worship</a>
-          <div class="dropdown-content">
-            <a href="worship.html">Mass Times</a>
-            <a href="worship.html#prayer-and-reconciliation-box">Prayer & Confession</a>
-            <a href="worship.html#seasonal-box">Our Lenten Schedule</a>
-            <!-- <!- close "dropdown-content" for Worship> -- -->
-          </div>
-          <!-- <!-close "dropdown"> for Worship-- -->
-        </div>
-        <div class="dropdown">
-          <a href="connect.html">Connect</a>
-          <div class="dropdown-content">
-            <a href="connect.html">Be one of us.</a>
-            <div class="dropdown-subcontent">
-              <a href="connect.html">Parish Membership</a>
-              <!-- <!-close dropdown-subcontent -- -->
-            </div>
-            <a href="connect-learn.html">Learn with us.</a>
-            <div class="dropdown-subcontent">
-              <a href="connect-learn.html">Baptism</a>
-              <a href="connect-learn.html#marriage-box">Marriage</a>
-              <a href="connect-learn.html#homebound-box">Communion For The Homebound</a>
-              <a href="connect-learn.html#anointing-box">Anointing of the Sick</a>
-              <a href="connect-learn.html#funeral-box">Funeral Planning</a>
-              <!-- <!- close "dropdown-subcontent"> -- -->
-            </div>
-            <a href="ccd.html">Grow with us.</a>
-            <div class="dropdown-subcontent">
-              <a href="ccd.html">Religious Education (CCD)</a>
-              <!-- <!-close dropdown-subcontent -- -->
-            </div>
-            <!-- <!- close "dropdown-content"> -- -->
-          </div>
-          <!-- <!-close "dropdown"> for Connect-- -->
-        </div>
-        <div class="dropdown">
-          <a href="translate.html">Translate</a>
-          <!-- <!- close "dropdown"> for Give-- -->
-        </div>
-        <div class="dropdown">
-          <a href="give.html">Give</a>
-          <div class="dropdown-content">
-            <a href="give.html">Stewardship.</a>
-            <div class="dropdown-subcontent">
-              <a href="give.html#time">Time</a>
-              <a href="give.html#talent">Talent</a>
-              <a href="give.html#treasure">Treasure</a>
-            </div>
-            <!-- <!- close "dropdown-content"> -- -->
-          </div>
-          <!-- <!- close "dropdown"> for Give-- -->
-        </div>
-        <!-- <!- close  ="nav-links"> -- -->
-      </div>
-    </nav>
-    <!-- NAV CLOSE ##################################################-->
-    <!-- CHURCH NAME BOX ##################################################-->
-    <div class="church-name-box">
-      <br>
-      <div class="text-james-less">ST. JAMES</div>
-      <div class="text-james-less">THE LESS</div>
-      <div class="text-roman">Roman Catholic Church</div>
-    </div>
-    <!-- CLOSE CHURCH NAME BOX##################################################-->
-<!-- top section holy-mass-box- -->
-<div class="holy-mass-box">
-      <div class="holy-mass-tagline">Join us for Holy Mass.</div>
-          <br><br>
-          <div class="schedule-box">
-            <div class="sked-box Sunday-sked-box">
-                <div class="sked-title">Sunday Schedule</div>
-                <ul>
-                    <li class="li-main">Saturday at 4 pm</li>
-                    <li class="li-main">Sunday:</li>
-                    <ul>
-                        <li class="li-sub">8 am</li>
-                        <li class="li-sub">10 am</li>
-                        <li class="li-sub">2 pm in Spanish</li>
-                        <li class="li-sub">5 pm</li>
-                    </ul>
-                </ul>
-            </div>               
-            <div class="sked-box Daily-sked-box">
-                <div class="sked-title">Daily Schedule</div>
-                <ul>
-                    <li class="li-main">Monday to Friday at 8:30 am</li>
-                </ul>
-            </div>
-        </div>  
-</div>
-<!-- close holy-mass-box- -->
-<!-- middle section prayer-and-reconciliation-box in darkslategrey background -->
-<div class="prayer-and-reconciliation-box" id="prayer-and-reconciliation-box">
-    <div class="prayer-and-reconciliation-tagline">Join us for Prayer and Reconciliation.</div>
-    <br>
-    <br>
-    <div class="confession-and-adoration-box">
-        <div class="prayer-box">
-            <div class="prayer-title">Confessions</div>
-            <ul>
-                <li class="prayer-li-main">Thursdays at 4:30 pm</li>
-            </ul>
-        </div>
-        <div class="prayer-box">
-            <div class="prayer-title">Eucharistic Adoration</div>
-            <ul>
-                <li class="prayer-li-main">Thursdays at 5 pm</li>
-            </ul>
-        </div>
-    </div>
-    <br><br>
-    <div class="prayer-title">Recitation of the Most Holy Rosary</div>
-    <ul>
-      <li class="prayer-li-main">before all masses on the first weekend of the month</li>
-      <li class="prayer-li-main">every Sunday at 1 pm in Spanish</li>
-    </ul>
-    <br><br>
-    <div class="prayer-title">Recitation of the Chaplet of the Divine Mercy</div>
-    <ul>
-      <li class="prayer-li-main">before the 10 am mass on the second weekend of the month</li>
-    </ul>
-    <br><br><br>
-</div>
-<!-- close  middle section prayer-and-reconciliation-box in darkslategrey background -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Worship</title>
+		<link rel="stylesheet" href="/CSS-Welcome/w-style.css" />
+		<link rel="stylesheet" href="./CSS-Worship/wo-style.css" />
+		<link rel="stylesheet" href="./CSS-Welcome/w-navbar.css" />
+		<link rel="stylesheet" href="./CSS/dropdown.css" />
+		<!-- <link rel="stylesheet" href="./CSS-Worship/wo-church-name-box.css" /> -->
+		<link rel="stylesheet" href="./CSS-Welcome/w-masstimes-overlay.css" />
+		<link rel="stylesheet" href="./CSS-Welcome/w-fixed-button.css" />
+		<link rel="stylesheet" href="./CSS-Welcome/w-footer.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
 
+	<body>
+		<nav class="navbar">
+			<div class="text-logo">
+				<a href="index.html">Logo</a>
+				<!-- <img src="logo-placeholder.png" alt="Logo" class="logo-image" />  -->
+			</div>
 
-<!-- open bottom section lenten schedule box --> 
-<div class="seasonal-box" id="seasonal-box">
-    <div class="seasonal-tagline">Let us pause and reflect this Lenten Season.</div>
-    <div class="seasonal-info-box">
-        <div class="seasonal-img-box">
-            <video autoplay>
-              <source src="./Assets/Candle-video.mp4" type="video/mp4">
-            </video>
-        </div>
-        <div class="seasonal-schedule-box"> 
-            <br>
-            <div class="sked-title">Ash Wednesday Mass, March 5</div>
-            <ul>
-                <li class="li-main">8:30 am</li>
-                <li class="li-main">6 pm </li>
-            </ul>
-            <br>
-            <div class="sked-title">Stations of the Cross</div>
-            <ul>
-                <li class="li-main">Every Friday of Lent at 7 pm </li>
-            </ul>
-            <br>
-            <div class="sked-title">Lenten Penance Service, date tba</div>
-            <!-- <ul>
-                <li class="li-main">date tba </li>
-            </ul> -->
-            <br>
-            <div class="sked-title">Holy Week Schedule, tba</div>
-        </div>
-    </div>
-</div>
-<!-- close bottom section lenten box --> 
-    
- <!-- <source src="/Candle-video.mp4"> -->
+			<div class="hamburger" onclick="toggleMenu()">&#9776;</div>
+			<div id="hamburger"></div>
 
-    <!-- SECTION FOR MASSTIMES -OVERLAY TRIGGERED BY LINK IN FOOTER  -->
- <section id="masstimes">
+			<!-- NAV-LINKS -->
+			<div class="nav-links">
+				<!-- WELCOME -->
+				<div class="dropdown">
+					<a href="welcome.html">Welcome</a>
+					<div class="dropdown-content">
+						<a href="welcome.html">Our Parish Mission</a>
+						<a href="welcome.html#parish-leadership">Our Servant Leaders</a>
+					</div>
+				</div>
+
+				<!-- WORSHIP -->
+				<div class="dropdown">
+					<a href="worship.html">Worship</a>
+					<div class="dropdown-content">
+						<a href="worship.html">Mass Times</a>
+						<a href="worship.html#prayer-and-reconciliation-box"
+							>Prayer & Confession</a
+						>
+						<a href="worship.html#seasonal-box">Our Lenten Schedule</a>
+					</div>
+				</div>
+
+				<!-- MORE for Tablet-->
+				<!-- <div class="more">
+					<div class="dropdown">
+						<a href="more.html">More</a>
+					</div>
+				</div> -->
+
+				<!-- CONNECT -->
+				<div class="connect">
+					<div class="dropdown">
+						<a href="connect.html">Connect</a>
+
+						<div class="dropdown-content">
+							<!-- Connect-Parish Membership:  Be With Us -->
+							<a href="connect.html">Be one of us.</a>
+							<div class="dropdown-subcontent">
+								<a href="connect.html">Parish Membership</a>
+							</div>
+
+							<!-- Connect-Sacraments:  Learn With Us -->
+							<a href="connect-learn.html">Learn with us.</a>
+							<div class="dropdown-subcontent">
+								<a href="connect-learn.html">Baptism</a>
+								<a href="connect-learn.html#marriage-box">Marriage</a>
+								<a href="connect-learn.html#homebound-box"
+									>Communion For The Homebound</a
+								>
+								<a href="connect-learn.html#anointing-box"
+									>Anointing of the Sick</a
+								>
+								<a href="connect-learn.html#funeral-box">Funeral Planning</a>
+							</div>
+
+							<!-- Connect-CCD:  Grow With Us -->
+							<a href="ccd.html">Grow with us.</a>
+							<div class="dropdown-subcontent">
+								<a href="ccd.html">Religious Education (CCD)</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Translate -->
+				<div class="translate">
+					<div class="dropdown">
+						<a href="translate.html">Translate</a>
+					</div>
+				</div>
+
+				<!-- Give -->
+				<div class="give">
+					<div class="dropdown">
+						<a href="give.html">Give</a>
+
+						<div class="dropdown-content">
+							<!-- Give: Stewardship -->
+							<a href="give.html">Stewardship.</a>
+							<div class="dropdown-subcontent">
+								<a href="give.html#time">Time</a>
+								<a href="give.html#talent">Talent</a>
+								<a href="give.html#treasure">Treasure</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</nav>
+
+		<!-- for mobile -->
+		<div class="vertical-menu" id="verticalMenu">
+			<!-- <div class="vertical-menu"> -->
+			<a href="welcome.html">Welcome</a>
+			<a href="worship.html">Worship</a>
+			<a href="connect.html">Connect</a>
+			<a href="translate.html">Translate</a>
+			<a href="give.html">Give</a>
+		</div>
+
+		<div class="boxA">
+			<div class="boxLeft">
+				<div class="church-name-container">
+					<div class="text-james-less">ST. JAMES</div>
+					<div class="text-james-less">THE LESS</div>
+					<div class="text-roman">Roman Catholic Church</div>
+				</div>
+			</div>
+			<div class="boxRight">
+				<div class="holy-mass-tagline">Join us for Holy Mass.</div>
+				<br /><br />
+				<div class="schedule-box">
+					<div class="sked-box Sunday-sked-box">
+						<div class="sked-title">Sunday Schedule</div>
+						<ul>
+							<li class="li-main">Saturday at 4 pm</li>
+							<li class="li-main">Sunday:</li>
+							<ul>
+								<li class="li-sub">8 am</li>
+								<li class="li-sub">10 am</li>
+								<li class="li-sub">2 pm in Spanish</li>
+								<li class="li-sub">5 pm</li>
+							</ul>
+						</ul>
+					</div>
+					<div class="sked-box Daily-sked-box">
+						<div class="sked-title">Daily Schedule</div>
+						<ul>
+							<li class="li-main">Monday to Friday at 8:30 am</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!--  middle section prayer-and-reconciliation-box in darkslategrey background -->
+		<div
+			class="prayer-and-reconciliation-box"
+			id="prayer-and-reconciliation-box"
+		>
+			<div class="prayer-and-reconciliation-tagline">
+				Join us for Prayer and Reconciliation.
+			</div>
+			<br />
+			<br />
+			<div class="confession-and-adoration-box">
+				<div class="prayer-box">
+					<div class="prayer-title">Confessions</div>
+					<ul>
+						<li class="prayer-li-main">Thursdays at 4:30 pm</li>
+						<li class="prayer-li-main">Saturdays at 3 pm</li>
+						<li class="prayer-li-main">or by appointment</li>
+					</ul>
+				</div>
+				<div class="prayer-box">
+					<div class="prayer-title">Eucharistic Adoration</div>
+					<ul>
+						<li class="prayer-li-main">Thursdays at 5 pm</li>
+					</ul>
+				</div>
+			</div>
+			<br /><br />
+			<div class="prayer-title">Recitation of the Most Holy Rosary</div>
+			<ul>
+				<li class="prayer-li-main">
+					before all masses on the first weekend of the month
+				</li>
+				<li class="prayer-li-main">every Sunday at 1 pm in Spanish</li>
+			</ul>
+			<br /><br />
+			<div class="prayer-title">
+				Recitation of the Chaplet of the Divine Mercy
+			</div>
+			<ul>
+				<li class="prayer-li-main">
+					before the 10 am mass on the second weekend of the month
+				</li>
+			</ul>
+			<br />
+			<br />
+			<br />
+			<br />
+			<br />
+		</div>
+
+		<!-- bottom section lenten schedule box -->
+		<div class="seasonal-box" id="seasonal-box">
+			<div class="seasonal-tagline">
+				Let us pause and reflect this Holy Week.
+			</div>
+			<div class="seasonal-info-box">
+				<div class="seasonal-img-box">
+					<br />
+					<br />
+					<video autoplay>
+						<source src="./Assets/Candle-video.mp4" type="video/mp4" />
+					</video>
+				</div>
+				<div class="seasonal-schedule-box">
+					<br />
+					<br />
+					<br />
+					<div class="sked-title">Palm Sunday, April 12</div>
+					<ul>
+						<li class="li-main">
+							Palms are blessed at our regular Sunday mass schedule
+						</li>
+						<!-- <li class="li-main">6 pm</li> -->
+					</ul>
+					<br />
+					<div class="sked-title">Holy Thursday, April 16 at 7 pm</div>
+					<br />
+					<div class="sked-title">Good Friday, April 17 at 3 pm</div>
+					<br />
+					<div class="sked-title">
+						Easter Vigil (Saturday), April 18 at 8 pm
+					</div>
+					<br />
+				</div>
+			</div>
+		</div>
+		<!-- close bottom section lenten box -->
+		<br />
+		<!-- <source src="/Candle-video.mp4" /> -->
+
+		<!-- SECTION FOR MASSTIMES -OVERLAY TRIGGERED BY LINK IN FOOTER  -->
+		<section id="masstimes">
   <div class="container1">MASS TIMES & DIRECTIONS</div>
   <div class="container2">
     <div class="box21">
@@ -277,17 +335,17 @@
   </div>
 
 </section> 
-    <!-- close secton for MASSTIMES -OVERLAY -->
-    <div class="masstimes-and-directions-link">
-      <a href="#masstimes">Mass Times & Directions</a>
-    </div>
-    <!-- <!FOOTER ####################################################--> 
-    <footer class="footer">
-      <div class="church-address">
-        36 Lincoln Ave., Jamesburg, NJ | 732-521-0100
-      </div>
-    </footer>
-    <!-- FOOTER CLOSE ####################################################-->
-  </body>
-  <script src="masstimes-overlay.js"></script>
+		
+		<div class="masstimes-and-directions-link">
+			<a href="#masstimes">Mass Times & Directions</a>
+		</div>
+		
+		<footer class="footer">
+			<div class="church-address">
+				36 Lincoln Ave., Jamesburg, NJ | 732-521-0100
+			</div>
+		</footer>
+
+	</body>
+	<script src="masstimes-overlay.js"></script>
 </html>
